--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ ul li::before{
     border-radius: 50%;
     height: 28px;
     width: 28px;
-    background-image: url(/images/unchecked.png);
+    background-image: url(https://github.com/tarun-s-77/TO-DO/blob/main/images/unchecked.png);
     background-size: cover;
     background-position: center;
     top: 10px;
@@ -80,7 +80,7 @@ ul li.checked{
     text-decoration: line-through;
 }
 ul li.checked::before{
-    background-image:url(/images/checked.png);
+    background-image:url(https://github.com/tarun-s-77/TO-DO/blob/main/images/checked.png);
     
 }
 ul li span{
